--- a/Stack Overflow tag predictor.ipynb
+++ b/Stack Overflow tag predictor.ipynb
@@ -22,7 +22,7 @@
     "Stack Overflow is the largest, most trusted online community for developers to learn, share their programming knowledge, and build their careers. </p>\n",
     " \n",
     "<p>\n",
-    "Stack Overflow is something which every programmer use one way or another. Each month, over 50 million developers come to Stack Overflow to learn, share their knowledge, and build their careers. It features questions and answers on a wide range of topics in computer programming. The website serves as a platform for users to ask and answer questions, and, through membership and active participation, to vote questions and answers up or down and edit questions and answers in a fashion similar to a wiki or Digg. As of April 2014 Stack Overflow has over 4,000,000 registered users, and it exceeded 10,000,000 questions in late August 2015. Based on the type of tags assigned to questions, the top eight most discussed topics on the site are: Java, JavaScript, C#, PHP, Android, jQuery, Python and HTML.\n",
+    "Stack Overflow is something which every programmer use one way or another. Each month, over 50 million developers come to Stack Overflow to learn, share their knowledge, and build their careers. It features questions and answers on a wide range of topics in computer programming. The website serves as a platform for users to ask and answer questions, and, through membership and active participation, to vote questions and answers up or down and edit questions and answers in a fashion similar to a wiki or Digg. As of April 2018 Stack Overflow has over 9,900,000 registered users, and it exceeded 17,000,000 questions. Based on the type of tags assigned to questions, the top eight most discussed topics on the site are: Java, JavaScript, C#, PHP, Android, jQuery, Python and HTML.\n",
     "</p>"
    ]
   },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,15 +113,13 @@
    },
    "outputs": [],
    "source": [
-    "#creating a db file from csv\n",
-    "if not os.path.isfile(\"train.db\"):\n",
+    "#Creating db file from csv\n",
+    "if not os.path.isfile('train.db'):\n",
     "    disk_engine = create_engine('sqlite:///train.db')\n",
     "    chunksize = 180000\n",
-    "    j=0 \n",
-    "    index_start=1\n",
+    "    index_start = 1\n",
     "    for df in pd.read_csv('Train.csv', names=['Id', 'Title', 'Body', 'Tags'], chunksize=chunksize, iterator=True, encoding='utf-8', ):\n",
     "        df.index += index_start\n",
-    "        j+=1\n",
     "        df.to_sql('data', disk_engine, if_exists='append')\n",
     "        index_start = df.index[-1] + 1"
    ]
@@ -165,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +270,7 @@
        "4                            java jdbc        2  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +543,7 @@
        "5        facebook api facebook-php-sdk"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1502,6 +1500,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<table align='left'>\n",
+    "<tr>\n",
+    "<th>X</th><th>y1</th><th>y2</th><th>y3</th><th>y4</th>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>x1</td><td>0</td><td>1</td><td>1</td><td>0</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>x2</td><td>1</td><td>0</td><td>0</td><td>0</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>x3</td><td>0</td><td>1</td><td>0</td><td>0</td>\n",
+    "</tr>\n",
+    "</table>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -1533,7 +1551,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Selecting only 500 labels"
+    "##### Selecting only 500 labels due to limitation of computing power"
    ]
   },
   {
@@ -1698,7 +1716,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
